samples/_failures_safe/1761093380_ee0523_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ea724a9.c: In function ‘main’:
./samples/SAFE/__tmp_0ea724a9.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("-------\n");
      |     ^~~~~~
